src/test/ui/rfc-2294-if-let-guard/feature-gate.stderr
error: no rules expected the token `let`
  --> $DIR/feature-gate.rs:64:15
   |
LL |     macro_rules! use_expr {
   |     --------------------- when calling this macro
...
LL |     use_expr!(let 0 = 1);
   |               ^^^ no rules expected this token in macro call

error[E0658]: `if let` guards are experimental
  --> $DIR/feature-gate.rs:7:12
   |
LL |         () if let 0 = 1 => {}
   |            ^^^^^^^^^^^^
   |
   = note: see issue #51114 <https://github.com/rust-lang/rust/issues/51114> for more information
   = help: add `#![feature(if_let_guard)]` to the crate attributes to enable
   = help: you can write `if matches!(<expr>, <pattern>)` instead of `if let <pattern> = <expr>`

error[E0658]: `if let` guards are experimental
  --> $DIR/feature-gate.rs:60:12
   |
LL |         () if let 0 = 1 => {}
   |            ^^^^^^^^^^^^
   |
   = note: see issue #51114 <https://github.com/rust-lang/rust/issues/51114> for more information
   = help: add `#![feature(if_let_guard)]` to the crate attributes to enable
   = help: you can write `if matches!(<expr>, <pattern>)` instead of `if let <pattern> = <expr>`

error[E0658]: `let` expressions in this position are experimental
  --> $DIR/feature-gate.rs:10:16
   |
LL |         () if (let 0 = 1) => {}
   |                ^^^^^^^^^
   |
   = note: see issue #53667 <https://github.com/rust-lang/rust/issues/53667> for more information
   = help: add `#![feature(let_chains)]` to the crate attributes to enable
   = help: you can write `matches!(<expr>, <pattern>)` instead of `let <pattern> = <expr>`

error[E0658]: `let` expressions in this position are experimental
  --> $DIR/feature-gate.rs:13:18
   |
LL |         () if (((let 0 = 1))) => {}
   |                  ^^^^^^^^^
   |
   = note: see issue #53667 <https://github.com/rust-lang/rust/issues/53667> for more information
   = help: add `#![feature(let_chains)]` to the crate attributes to enable
   = help: you can write `matches!(<expr>, <pattern>)` instead of `let <pattern> = <expr>`

error[E0658]: `let` expressions in this position are experimental
  --> $DIR/feature-gate.rs:16:23
   |
LL |         () if true && let 0 = 1 => {}
   |                       ^^^^^^^^^
   |
   = note: see issue #53667 <https://github.com/rust-lang/rust/issues/53667> for more information
   = help: add `#![feature(let_chains)]` to the crate attributes to enable
   = help: you can write `matches!(<expr>, <pattern>)` instead of `let <pattern> = <expr>`

error[E0658]: `let` expressions in this position are experimental
  --> $DIR/feature-gate.rs:19:15
   |
LL |         () if let 0 = 1 && true => {}
   |               ^^^^^^^^^
   |
   = note: see issue #53667 <https://github.com/rust-lang/rust/issues/53667> for more information
   = help: add `#![feature(let_chains)]` to the crate attributes to enable
   = help: you can write `matches!(<expr>, <pattern>)` instead of `let <pattern> = <expr>`

error[E0658]: `let` expressions in this position are experimental
  --> $DIR/feature-gate.rs:22:16
   |
LL |         () if (let 0 = 1) && true => {}
   |                ^^^^^^^^^
   |
   = note: see issue #53667 <https://github.com/rust-lang/rust/issues/53667> for more information
   = help: add `#![feature(let_chains)]` to the crate attributes to enable
   = help: you can write `matches!(<expr>, <pattern>)` instead of `let <pattern> = <expr>`

error[E0658]: `let` expressions in this position are experimental
  --> $DIR/feature-gate.rs:25:24
   |
LL |         () if true && (let 0 = 1) => {}
   |                        ^^^^^^^^^
   |
   = note: see issue #53667 <https://github.com/rust-lang/rust/issues/53667> for more information
   = help: add `#![feature(let_chains)]` to the crate attributes to enable
   = help: you can write `matches!(<expr>, <pattern>)` instead of `let <pattern> = <expr>`

error[E0658]: `let` expressions in this position are experimental
  --> $DIR/feature-gate.rs:28:16
   |
LL |         () if (let 0 = 1) && (let 0 = 1) => {}
   |                ^^^^^^^^^
   |
   = note: see issue #53667 <https://github.com/rust-lang/rust/issues/53667> for more information
   = help: add `#![feature(let_chains)]` to the crate attributes to enable
   = help: you can write `matches!(<expr>, <pattern>)` instead of `let <pattern> = <expr>`

error[E0658]: `let` expressions in this position are experimental
  --> $DIR/feature-gate.rs:28:31
   |
LL |         () if (let 0 = 1) && (let 0 = 1) => {}
   |                               ^^^^^^^^^
   |
   = note: see issue #53667 <https://github.com/rust-lang/rust/issues/53667> for more information
   = help: add `#![feature(let_chains)]` to the crate attributes to enable
   = help: you can write `matches!(<expr>, <pattern>)` instead of `let <pattern> = <expr>`

error[E0658]: `let` expressions in this position are experimental
  --> $DIR/feature-gate.rs:32:15
   |
LL |         () if let 0 = 1 && let 1 = 2 && (let 2 = 3 && let 3 = 4 && let 4 = 5) => {}
   |               ^^^^^^^^^
   |
   = note: see issue #53667 <https://github.com/rust-lang/rust/issues/53667> for more information
   = help: add `#![feature(let_chains)]` to the crate attributes to enable
   = help: you can write `matches!(<expr>, <pattern>)` instead of `let <pattern> = <expr>`

error[E0658]: `let` expressions in this position are experimental
  --> $DIR/feature-gate.rs:32:28
   |
LL |         () if let 0 = 1 && let 1 = 2 && (let 2 = 3 && let 3 = 4 && let 4 = 5) => {}
   |                            ^^^^^^^^^
   |
   = note: see issue #53667 <https://github.com/rust-lang/rust/issues/53667> for more information
   = help: add `#![feature(let_chains)]` to the crate attributes to enable
   = help: you can write `matches!(<expr>, <pattern>)` instead of `let <pattern> = <expr>`

error[E0658]: `let` expressions in this position are experimental
  --> $DIR/feature-gate.rs:32:42
   |
LL |         () if let 0 = 1 && let 1 = 2 && (let 2 = 3 && let 3 = 4 && let 4 = 5) => {}
   |                                          ^^^^^^^^^
   |
   = note: see issue #53667 <https://github.com/rust-lang/rust/issues/53667> for more information
   = help: add `#![feature(let_chains)]` to the crate attributes to enable
   = help: you can write `matches!(<expr>, <pattern>)` instead of `let <pattern> = <expr>`

error[E0658]: `let` expressions in this position are experimental
  --> $DIR/feature-gate.rs:32:55
   |
LL |         () if let 0 = 1 && let 1 = 2 && (let 2 = 3 && let 3 = 4 && let 4 = 5) => {}
   |                                                       ^^^^^^^^^
   |
   = note: see issue #53667 <https://github.com/rust-lang/rust/issues/53667> for more information
   = help: add `#![feature(let_chains)]` to the crate attributes to enable
   = help: you can write `matches!(<expr>, <pattern>)` instead of `let <pattern> = <expr>`

error[E0658]: `let` expressions in this position are experimental
  --> $DIR/feature-gate.rs:32:68
   |
LL |         () if let 0 = 1 && let 1 = 2 && (let 2 = 3 && let 3 = 4 && let 4 = 5) => {}
   |                                                                    ^^^^^^^^^
   |
   = note: see issue #53667 <https://github.com/rust-lang/rust/issues/53667> for more information
   = help: add `#![feature(let_chains)]` to the crate attributes to enable
   = help: you can write `matches!(<expr>, <pattern>)` instead of `let <pattern> = <expr>`

error[E0658]: `let` expressions in this position are experimental
  --> $DIR/feature-gate.rs:39:15
   |
LL |         () if let Range { start: _, end: _ } = (true..true) && false => {}
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #53667 <https://github.com/rust-lang/rust/issues/53667> for more information
   = help: add `#![feature(let_chains)]` to the crate attributes to enable
   = help: you can write `matches!(<expr>, <pattern>)` instead of `let <pattern> = <expr>`

error[E0658]: `let` expressions in this position are experimental
  --> $DIR/feature-gate.rs:54:16
   |
LL |     use_expr!((let 0 = 1 && 0 == 0));
   |                ^^^^^^^^^
   |
   = note: see issue #53667 <https://github.com/rust-lang/rust/issues/53667> for more information
   = help: add `#![feature(let_chains)]` to the crate attributes to enable
   = help: you can write `matches!(<expr>, <pattern>)` instead of `let <pattern> = <expr>`

error[E0658]: `let` expressions in this position are experimental
  --> $DIR/feature-gate.rs:56:16
   |
LL |     use_expr!((let 0 = 1));
   |                ^^^^^^^^^
   |
   = note: see issue #53667 <https://github.com/rust-lang/rust/issues/53667> for more information
   = help: add `#![feature(let_chains)]` to the crate attributes to enable
   = help: you can write `matches!(<expr>, <pattern>)` instead of `let <pattern> = <expr>`

error: aborting due to 19 previous errors

For more information about this error, try `rustc --explain E0658`.
